--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@
             <div class="row g-0">
                 <div class="col-lg-6 py-5 wow fadeIn" data-wow-delay="0.1s">
                     <div class="py-5">
-                        <h1 class="display-6 mb-4">Tea is a drink of <span class="text-white">health</span> and <span class="text-white">beauty</span></h1>
-                        <h5 class="fw-normal lh-base fst-italic text-white mb-5">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit</h5>
+                        <h1 class="display-6 mb-4">Youtube Startup<span class="text-white"></h1>
+                        <h5 class="fw-normal lh-base fst-italic text-white mb-5">Selamat datang di stARSup incubator! Di sini, kami tidak hanya membuat video, tapi juga membangun komunitas yang penuh energi dan kreativitas. </h5>
                         <div class="row g-4 mb-5">
                             <div class="col-sm-6">
                                 <div class="d-flex align-items-center">
