--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,6 @@
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
-
     <!-- Libraries Stylesheet -->
     <link href="lib/animate/animate.min.css" rel="stylesheet">
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
@@ -39,47 +38,43 @@
     <!-- Spinner End -->
 
     
-    <!-- Navbar Start -->
-    <div class="container-fluid bg-white sticky-top">
-        <div class="container">
-            <nav class="navbar navbar-expand-lg bg-white navbar-light py-2 py-lg-0">
-                <a href="index.html" class="navbar-brand">
-                    <img class="img-fluid" src="img/logo.png" alt="Logo">
-                </a>
-                <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <div class="navbar-nav ms-auto">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="product.html" class="nav-item nav-link">Products</a>
-                        <a href="store.html" class="nav-item nav-link">Store</a>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                            <div class="dropdown-menu bg-light rounded-0 m-0">
-                                <a href="feature.html" class="dropdown-item">Features</a>
-                                <a href="blog.html" class="dropdown-item">Blog Article</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                <a href="404.html" class="dropdown-item">404 Page</a>
-                            </div>
+   <!-- Navbar Start -->
+   <div class="container-fluid bg-white sticky-top">
+    <div class="container">
+        <nav class="navbar navbar-expand-lg bg-white navbar-light py-2 py-lg-0">
+            <a href="index.html" class="navbar-brand">
+                <img class="img-fluid" src="img/logo.png" alt="Logo">
+            </a>
+            <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <div class="navbar-nav ms-auto">
+                    <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <a href="about.html" class="nav-item nav-link">About</a>
+                    <a href="product.html" class="nav-item nav-link">Products</a>
+                    <a href="store.html" class="nav-item nav-link">Store</a>
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                        <div class="dropdown-menu bg-light rounded-0 m-0">
+                            <a href="feature.html" class="dropdown-item">StARSup</a>
+                            <a href="blog.html" class="dropdown-item">EntreprenARS</a>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link active">Contact</a>
                     </div>
-                    <div class="border-start ps-4 d-none d-lg-block">
-                        <button type="button" class="btn btn-sm p-0"><i class="fa fa-search"></i></button>
-                    </div>
+                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    <img src="img/starsup.png" class="starsup"> 
+                    <img src="img/entepener.png" class="enteprenar"> 
                 </div>
-            </nav>
-        </div>
+            </div>
+        </nav>
     </div>
-    <!-- Navbar End -->
-
+</div>
+<!-- Navbar End -->
 
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center py-5">
-            <h1 class="display-2 text-dark mb-4 animated slideInDown">Contact Us</h1>
+            <h1 class="display-2 text-dark mb-4 animated slideInDown">Hubungi Kami</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
                     <li class="breadcrumb-item"><a href="#">Home</a></li>
@@ -97,7 +92,7 @@
         <div class="container">
             <div class="section-title text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <p class="fs-5 fw-medium fst-italic text-primary">Contact Us</p>
-                <h1 class="display-6">If You Have Any Query, Please Contact Us</h1>
+                <h1 class="display-7">Jika ada pertanyaan, Hubungi kami</h1>
             </div>
             <div class="row g-5 mb-5">
                 <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="0.3s">
@@ -105,21 +100,18 @@
                         <i class="fa fa-envelope fa-2x text-white"></i>
                     </div>
                     <p class="mb-2">info@example.com</p>
-                    <p class="mb-0">support@example.com</p>
                 </div>
                 <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="0.4s">
                     <div class="btn-square mx-auto mb-3">
-                        <i class="fa fa-phone fa-2x text-white"></i>
+                        <i class="bi-instagram fa-2x text-white"></i>
                     </div>
-                    <p class="mb-2">+012 345 67890</p>
-                    <p class="mb-0">+012 345 67890</p>
+                    <p class="mb-2">@starsupincubator</p>
                 </div>
                 <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="0.5s">
                     <div class="btn-square mx-auto mb-3">
                         <i class="fa fa-map-marker-alt fa-2x text-white"></i>
                     </div>
-                    <p class="mb-2">123 Street</p>
-                    <p class="mb-0">New York, USA</p>
+                    <p class="mb-2">Antapani, Jl. Terusan Sekolah No.1-2, Cicaheum, Kec. Kiaracondong, Kota Bandung, Jawa Barat 40282</p>
                 </div>
             </div>
             <div class="row g-5">
@@ -160,10 +152,7 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="h-100">
-                        <iframe class="w-100 rounded"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
-                        frameborder="0" style="height: 100%; min-height: 300px; border:0;" allowfullscreen="" aria-hidden="false"
-                        tabindex="0"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15843.334946105539!2d107.6314634993469!3d-6.9104745426536!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e7eb9456ae97%3A0x9fd67cfa593e7dc9!2sARS%20University!5e0!3m2!1sid!2sid!4v1705756566440!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </div>
