--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Tea House - Tea Shop Website Template</title>
+    <title>ARS</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -20,6 +20,8 @@
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha384-GLhlTQ8iUNnV4xZlRn+4lG6JlBzzQZpiCaa4MIc98PUEsdMvaFj2aWr1I81FvtX" crossorigin="anonymous">
+
 
     <!-- Libraries Stylesheet -->
     <link href="lib/animate/animate.min.css" rel="stylesheet">
@@ -30,6 +32,8 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -52,17 +56,15 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto">
-                        <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="product.html" class="nav-item nav-link">Products</a>
-                        <a href="store.html" class="nav-item nav-link">Store</a>
+                        <a href="#index.html" class="nav-item nav-link active">Home</a>
+                        <a href="#about.html" class="nav-item nav-link scroll-down">About</a>
+                        <a href="#product.html" class="nav-item nav-link scroll-down">Products</a>
+                        <a href="#store.html" class="nav-item nav-link scroll-down">Store</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu bg-light rounded-0 m-0">
-                                <a href="feature.html" class="dropdown-item">Features</a>
-                                <a href="blog.html" class="dropdown-item">Blog Article</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                <a href="404.html" class="dropdown-item">404 Page</a>
+                                <a href="feature.html" class="dropdown-item">StARSup</a>
+                                <a href="blog.html" class="dropdown-item">EntreprenARS</a>
                             </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -128,7 +130,7 @@
 
 
     <!-- About Start -->
-    <div class="container-xxl py-5">
+    <div class="container-xxl py-5" id="about">
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6">
@@ -182,7 +184,7 @@
 
 
     <!-- Products Start -->
-    <div class="container-fluid product py-5 my-5">
+    <div class="container-fluid product py-5 my-5" id="product">
         <div class="container py-5">
             <div class="section-title text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <p class="fs-5 fw-medium fst-italic text-primary">Informasi</p>
@@ -361,7 +363,7 @@
 
 
     <!-- Store Start -->
-    <div class="container-xxl py-5">
+    <div class="container-xxl py-5" id="store">
         <div class="container">
             <div class="section-title text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <p class="fs-5 fw-medium fst-italic text-primary">Online Store</p>
@@ -488,33 +490,29 @@
     <div class="container-xxl contact py-5">
         <div class="container">
             <div class="section-title text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <p class="fs-5 fw-medium fst-italic text-primary">Contact Us</p>
-                <h1 class="display-6">Contact us right now</h1>
+                <p class="fs-5 fw-medium fst-italic text-primary"> Contact</p>
+                <h1 class="display-7">ika ada pertanyaan, Hubungi kami</h1>
             </div>
             <div class="row justify-content-center wow fadeInUp" data-wow-delay="0.1s">
                 <div class="col-lg-8">
-                    <p class="text-center mb-5">Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo</p>
                     <div class="row g-5">
                         <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="0.3s">
                             <div class="btn-square mx-auto mb-3">
                                 <i class="fa fa-envelope fa-2x text-white"></i>
                             </div>
                             <p class="mb-2">info@example.com</p>
-                            <p class="mb-0">support@example.com</p>
                         </div>
                         <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="0.4s">
                             <div class="btn-square mx-auto mb-3">
-                                <i class="fa fa-phone fa-2x text-white"></i>
+                                <i class="bi-instagram fa-2x text-white"></i>
                             </div>
-                            <p class="mb-2">+012 345 67890</p>
-                            <p class="mb-0">+012 345 67890</p>
+                            <p class="mb-2">@starsupincubator</p>
                         </div>
                         <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="0.5s">
                             <div class="btn-square mx-auto mb-3">
                                 <i class="fa fa-map-marker-alt fa-2x text-white"></i>
                             </div>
-                            <p class="mb-2">123 Street</p>
-                            <p class="mb-0">New York, USA</p>
+                            <p class="mb-2">Antapani, Jl. Terusan Sekolah No.1-2, Cicaheum, Kec. Kiaracondong, Kota Bandung, Jawa Barat 40282</p>
                         </div>
                     </div>
                 </div>
@@ -529,10 +527,10 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-primary mb-4">Our Office</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@example.com</p>
+                    <h4 class="text-primary mb-4">PMB Center</h4>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>Antapani, Jl. Terusan Sekolah No.1-2, Cicaheum, Kec. Kiaracondong, Kota Bandung, Jawa Barat 40282</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+6285711887425</p>
+                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>fti.ars.ac.id</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
@@ -549,20 +547,14 @@
                     <a class="btn btn-link" href="">Support</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-primary mb-4">Business Hours</h4>
-                    <p class="mb-1">Monday - Friday</p>
-                    <h6 class="text-light">09:00 am - 07:00 pm</h6>
-                    <p class="mb-1">Saturday</p>
-                    <h6 class="text-light">09:00 am - 12:00 pm</h6>
-                    <p class="mb-1">Sunday</p>
-                    <h6 class="text-light">Closed</h6>
+                    <h4 class="text-primary mb-4">Jam Aktif</h4>
+                    <p class="mb-1">Senin - Jumat</p>
+                    <h6 class="text-light">09.00- 17:00 </h6>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-primary mb-4">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                    <h4 class="text-primary mb-4">Temui Kami Disini</h4>
                     <div class="position-relative w-100">
-                        <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15843.334946105539!2d107.6314634993469!3d-6.9104745426536!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e7eb9456ae97%3A0x9fd67cfa593e7dc9!2sARS%20University!5e0!3m2!1sid!2sid!4v1705756566440!5m2!1sid!2sid" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </div>
@@ -577,10 +569,6 @@
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
                     &copy; <a class="fw-medium" href="#">Your Site Name</a>, All Right Reserved.
-                </div>
-                <div class="col-md-6 text-center text-md-end">
-                    <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                    Designed By <a class="fw-medium" href="https://htmlcodex.com">HTML Codex</a> Distributed By <a class="fw-medium" href="https://themewagon.com">ThemeWagon</a>
                 </div>
             </div>
         </div>
@@ -607,6 +595,44 @@
             pause: 'hover' // Untuk memberhentikan otomatisasi saat kursor berada di atas slider
           });
         });
+
+        $(document).ready(function(){
+            $(".scroll-down").on('click', function(event) {
+              if (this.hash !== "") {
+                event.preventDefault();
+        
+                // Ambil lokasi hash dan pindahkan scroll ke elemen dengan ID yang sesuai
+                var hash = this.hash;
+                $('html, body').animate({
+                  scrollTop: $(hash).offset().top
+                }, 800, function(){
+                  // window.location.hash = hash; // Hapus baris ini agar tidak memperbarui hash URL
+                });
+              }
+            });
+        
+            // Scroll ke bagian "About" saat halaman dimuat
+            var aboutSection = $("#about");
+            if (aboutSection.length > 0) {
+              $('html, body').animate({
+                scrollTop: aboutSection.offset().top
+              }, 800);
+            }
+
+            var aboutSection = $("#product");
+            if (aboutSection.length > 0) {
+              $('html, body').animate({
+                scrollTop: aboutSection.offset().top
+              }, 800);
+            }
+
+            var aboutSection = $("#store");
+            if (aboutSection.length > 0) {
+              $('html, body').animate({
+                scrollTop: aboutSection.offset().top
+              }, 800);
+            }
+          });
       </script>
 
     <!-- Template Javascript -->
