--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-7 text-left margin-left-20">
                                     <p class="fs-4 text-white animated zoomIn">Welcome to <strong class="text-dark">TEA House</strong></p>
-                                    <h1 class="display-1 text-dark mb-4 animated zoomIn">Organic & Quality Tea Production</h1>
+                                    <h1 class="display-1 text-dark mb-4 animated zoomIn">ARS University</h1>
                                     <a href="" class="btn btn-light rounded-pill py-3 px-5 animated zoomIn">Explore More</a>
                                 </div>
                             </div>
@@ -106,7 +106,7 @@
                                 <div class="row justify-content-center">
                                     <div class="col-lg-7 text-left margin-left-20">
                                         <p class="fs-4 text-white animated zoomIn">Welcome to <strong class="text-dark">TEA House</strong></p>
-                                        <h1 class="display-1 text-dark mb-4 animated zoomIn">Organic & Quality Tea Production</h1>
+                                        <h1 class="display-1 text-dark mb-4 animated zoomIn">ARS University</h1>
                                         <a href="" class="btn btn-light rounded-pill py-3 px-5 animated zoomIn">Explore More</a>
                                     </div>
                                 </div>
@@ -189,7 +189,7 @@
         <div class="container py-5">
             <div class="section-title text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <p class="fs-5 fw-medium fst-italic text-primary">Informasi</p>
-                <h1 class="display-6">Bisnis Digital & Konvesional ARS University 2023</h1>
+                <h1 class="display-7">Bisnis Digital & Konvesional ARS University 2023</h1>
             </div>
             <div class="owl-carousel product-carousel wow fadeInUp" data-wow-delay="0.5s">
                 <a href="" class="d-block product-item rounded">
