--- a/entrepener.html
+++ b/entrepener.html
@@ -57,7 +57,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto">
-                        <a href="#index.html" class="nav-item nav-link active">Beranda</a>
+                        <a href="index.html" class="nav-item nav-link active">Beranda</a>
                         <a href="#tentang" class="nav-item nav-link scroll-down">Tentang</a>
                         <a href="#informasi" class="nav-item nav-link scroll-down">Informasi</a>
                         <a href="#galery" class="nav-item nav-link scroll-down">Galeri</a>
