--- a/startup.html
+++ b/startup.html
@@ -177,7 +177,7 @@
                         <span class="text-body"><strong>Tekku</strong>: Platform perbaikan elektronik terjangkau,handal,dan transparan.Teknologi untuk biaya,proses perbaikan,dan suku cadang.</span>
                     </div>
                 </a>
-                <a href="https://aqibers.id" class="d-block product-item rounded">
+                <a href="https://www.aqiqahbersama.com/#/" class="d-block product-item rounded">
                     <img src="img/product-4.png" alt="">
                     <div class="bg-white shadow-sm text-center p-4 position-relative mt-n5 mx-4">
                         <h4 class="text-primary1">Aqibers</h4>
